--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-blog",
+  "name": "vue-trello",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,5 +29,6 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
