--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "jsonwebtoken": "^8.5.1",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
